# polyclip

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  AllClippings.cpp  CMakeLists.txt  Clippings.cpp  Clippings.h  LICENSE  LoopCode.cpp  Mesh.cpp  Mesh.h  NoGlobalVars.cpp  PointInPolygon.cpp  README.md  SingleCell.cpp  SingleCell.h  SingleCellClipping.cpp  SingleCellClippingHalf.cpp  Sorting.cpp  Test.txt  clippings.cpp  clippings_kokkos.cpp  clippings_kokkos.h  geometry.cpp  geometry.h  intersect.cpp  intersect.h  intersect_kokkos.cpp  intersect_kokkos.h  main.cpp  main_kokkos.cpp  materials.cpp  mesh.cpp  mesh.h  mesh_kokkos.cpp  timer.h
.github/workflows/: ci.yml
GPU/: clippings_gpu.cpp  clippings_gpu.h  geometry_gpu.cpp  geometry_gpu.h  intersect_gpu.cpp  intersect_gpu.h  main_gpu.cpp  mesh_gpu.cpp  mesh_gpu.h
cmake/: ClangFormat.cmake
core/: clip.h  clipped_part.cpp  clipped_part.h  clipped_part_gpu.cpp  clippings.h  geometry.h  intersect.h  intersect_gpu.h  intersect_n_d.h  mesh.cpp  mesh.h  print.h  timer.h
data/: TimeResults_Kokkos_120.txt  TimeResults_Kokkos_80.txt  TimeResults_OpenMP_120.txt  TimeResults_OpenMP_80.txt  cpu_120.txt  cpu_80.txt  cpu_vs_gpu.sh  gpu_120.txt  time_results_omp_120.txt
data/mesh/: cyl_sandwich_hr.gmv  grid.gmv  inmesh.gmv  pipe_tm.gmv  poly.gmv  poly_square.gmv  unit_crust-0.02.gmv  unit_crust-0.04.gmv  unit_crust-0.08.gmv  unit_crust-0.16.gmv
data/timing/: TimeResults_OpenMP_120.txt  TimeResults_OpenMP_80.txt  cpu_120.txt  cpu_1200.txt  gpu_1200.txt  gpu_80.txt  time_results_kokkos_120.txt  time_results_omp_1200.txt
gmv/: io.cpp  io.h  test_read.cpp  test_read_and_write.cpp  test_write.cpp
gmv_tool/: gmv_writer.cpp  gmv_writer.h  gmvstream.cpp  gmvstream.h  main.cpp
gpu/: main_gpu.cpp  mesh_gpu.cpp
internship/gpu/: main_gpu.cpp  mesh_gpu.h
internship/kokkos/: clippings_kokkos.cpp
internship/omp/: clippings.h  geometry.cpp  main.cpp  mesh.h
kokkos/: MultipleThreads.sh  PlotTimeofThreads.py  clippings_kokkos.cpp  clippings_kokkos.h  geometry.cpp  intersect_kokkos.cpp  main_kokkos.cpp  mesh_kokkos.cpp  mesh_kokkos.h
omp/: clippings.cpp  geometry.h  main.cpp
scripts/: TimeResults_Kokkos_80.txt  all_cmake.sh  cpu_gpu_table.py  cpu_vs_gpu.sh  generate_test_lines.py  getalloc.sh  kokkos-tools-configure.sh  kokkos.sh  kokkos_gpu.sh  kokkos_omp.sh  native_omp.sh  parse_profiling_data.py  plot_clips.py  polyint.sh  practice_python.py  profile_script.sh  rebuild_kokkos.sh  scaling.sh  set_kokkos.sh  setenv.sh
scripts/timing/: cpu_gpu_table.py  cpu_vs_gpu.sh  plot_clips.py  scaling.sh
test/: .geometry_gpu.h.swp  .main_gpu.cpp.swp  CMakeLists.txt  clipped_part_gpu.cpp  clipped_part_gpu.h  clippings_gpu.h  compare_outputs.cpp  diff_line_rep_main_gpu.cpp  flatten_gmv.cpp  geometry_gpu.h  intersect_gpu.h  intersect_n_d_gpu.h  main_gpu.cpp  main_gpu_copy.cpp  materials_gpu.cpp  materials_gpu.h  mesh_gpu.cpp  mesh_gpu.h  print_gpu.h  struct_arbitrary_main_gpu.cpp  structured_main_gpu.cpp  test_grid_diagnal.cpp  test_grid_diagonal.cpp  test_grid_horizontal.cpp  test_mesh.cpp  test_mesh_profiling.cpp  test_poly_arbitrary.cpp  test_poly_legacy.cpp  test_predicates.h  test_profiling.cpp  test_read.cpp  test_read_and_write.cpp  test_write.cpp
test/lines/: arbitrary_lines  coincide_lines  diagonal_lines  horizontal_lines  legacy_diagonal_lines  legacy_horizontal_lines  legacy_vertical_lines  parallel_lines
tools/: clip_gpu.h  clippings_gpu.h  print_gpu.h
