
add_executable(test_clip_grid_diagonal test_grid_diagonal.cpp)
add_executable(test_clip_grid_horizontal test_grid_horizontal.cpp)
add_executable(test_clip_poly_arbitrary test_poly_arbitrary.cpp)
add_executable(test_clip_poly_legacy test_poly_legacy.cpp)
add_executable(test_gmv_writer test_write.cpp)
add_executable(test_gmv_reader test_read.cpp)
add_executable(test_gmv_read_and_write test_read_and_write.cpp)

target_link_libraries(test_clip_grid_diagonal PUBLIC polyclip)
target_link_libraries(test_clip_grid_horizontal PUBLIC polyclip)
target_link_libraries(test_clip_poly_arbitrary PUBLIC polyclip)
target_link_libraries(test_clip_poly_legacy PUBLIC polyclip)
target_link_libraries(test_gmv_writer PUBLIC polyclip)
target_link_libraries(test_gmv_reader PUBLIC polyclip)
target_link_libraries(test_gmv_read_and_write PUBLIC polyclip)

add_test(NAME test_clip_grid_diagonal COMMAND test_clip_grid_diagonal)
add_test(NAME test_clip_grid_horizontal COMMAND test_clip_grid_horizontal)
add_test(NAME test_clip_poly_arbitrary COMMAND test_clip_poly_arbitrary)
add_test(NAME test_clip_poly_legacy COMMAND test_clip_poly_legacy)
add_test(NAME test_gmv_writer COMMAND test_gmv_writer)
add_test(NAME test_gmv_reader COMMAND test_gmv_reader)
add_test(NAME test_gmv_read_and_write COMMAND test_gmv_read_and_write)